# cn3d

./: CMakeLists.txt  README.md
examples/bgfx/: CMakeLists.txt  main.cpp
examples/common/: Makefile
examples/cube/: CMakeLists.txt  main.cpp
examples/cube/runtime/assets/: cube.glb  plane.glb
examples/cube/runtime/shaders/: cmd.txt  fs_cubes.sc  lit.frag.sc  lit.vert.sc  varying.def.sc  vs_cubes.sc
examples/vulkan/: CMakeLists.txt
include/cn/camera/: camera.hpp
include/cn/color/: color.hpp
include/cn/graphics/: light.hpp  material.hpp  model.hpp  renderer.hpp  shader.hpp
include/cn/input/: input.hpp
include/cn/math/: matrix.hpp  vector.hpp
include/cn/scene/: scene.hpp  view.hpp
include/cn/time/: time.hpp
include/cn/window/: window.hpp
runtime/: dummy.gltf
shaders/: Makefile
shaders/pbr/: def.sc  fs.sc  vs.sc
src/cn/: main.cpp
src/cn/camera/: camera.cpp
src/cn/graphics/: light.cpp  material.cpp  model.cpp  renderer.cpp  shader.cpp
src/cn/input/: input.cpp
src/cn/scene/: scene.cpp  view.cpp
src/cn/time/: time.cpp
src/cn/window/: window.cpp
